force-app/main/default/objects/NS_AccountRelationships__c/NS_AccountRelationships__c.object-meta.xml
<CustomObject>
    <description>Account Relationship custom object</description>
    <label>Related Account</label>
    <nameField>
        <displayFormat>AR{0000}</displayFormat>
        <label>Account Relationships ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>