force-app/main/default/objects/NS_AccountRelationships__c/fields/NS_BusinessAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_BusinessAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Account</description>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate and Service Accounts</relationshipLabel>
    <relationshipName>Account_Relationships_Business</relationshipName>
    <type>Lookup</type>
</CustomField>