force-app/main/default/objects/NS_AccountRelationships__c/fields/NS_CorporateAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_CorporateAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corporate Account</description>
    <label>Corporate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business and Service Accounts</relationshipLabel>
    <relationshipName>Account_Relationships_Corp</relationshipName>
    <type>Lookup</type>
</CustomField>