force-app/main/default/objects/NS_AccountRelationships__c/fields/NS_Description__c.field-meta.xml
<CustomField>
    <fullName>NS_Description__c</fullName>
    <description>Description of the account relationship</description>
    <label>Description</label>
    <length>140</length>
    <type>Text</type>
</CustomField>