force-app/main/default/objects/NS_AccountRelationships__c/fields/NS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_External_ID__c</fullName>
    <description>Combination of External ID of Corp,Business and Service Account.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>