force-app/main/default/objects/NS_AccountRelationships__c/fields/NS_ServiceAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_ServiceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Account</description>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate and Business Accounts</relationshipLabel>
    <relationshipName>Account_Relationships_Service</relationshipName>
    <type>Lookup</type>
</CustomField>